modules/noosphere/taghmata/nixidy/manifests/prod/glance/Namespace-glances.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: glances
