modules/noosphere/taghmata/nixidy/manifests/prod/glance/Deployment-glance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: glance
  name: glance
  namespace: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: glance-secrets
          image: glanceapp/glance:v0.8.6
          name: glance
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /app/config
              name: glance-config
            - mountPath: /app/assets
              name: glance-assets
      volumes:
        - configMap:
            name: glance-config
          name: glance-config
        - emptyDir:
            sizeLimit: 500Mi
          name: glance-assets
