modules/noosphere/taghmata/nixidy/manifests/prod/glance/Service-glance.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: glance
  type: ClusterIP
