modules/noosphere/taghmata/nixidy/manifests/prod/glance/Ingress-glance-ip-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: glance-ip-root
  namespace: glance
spec:
  ingressClassName: traefik
  rules:
    - host: glance.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: glance
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - glance.noosphere.uk
      secretName: glance-tls
